Release 0.2.2 (pending)
==========================

- Fix build failure on all big endian architectures

Release 0.2.1 (2016-04-25)
==========================

- Fixes for E4000 and FC001x tuner types
- Fixed debian control file Maintainer/Uploaders

Release 0.2.0 (2015-12-10)
==========================

- Added device info arguments and device settings
- Added support for the direct access buffer API

Release 0.1.0 (2015-10-10)
==========================

- Initial release of Soapy RTL-SDR support module