@@ -1,5 +1,5 @@
 Source: soapyrtlsdr
-Section: libs
+Section: hamradio
 Priority: optional
 Maintainer: Charles J. Cliffe <cj@cubicproductions.com>
 Uploaders: Josh Blum <josh@pothosware.com>
@@ -8,16 +8,29 @@ Build-Depends:
     cmake,
     libsoapysdr-dev,
     librtlsdr-dev
-Standards-Version: 3.9.5
+Standards-Version: 3.9.8
 Homepage: https://github.com/pothosware/SoapyRTLSDR/wiki
 Vcs-Git: https://github.com/pothosware/SoapyRTLSDR.git
 Vcs-Browser: https://github.com/pothosware/SoapyRTLSDR
 
-Package: soapysdr-rtlsdr
-Section: libs
+Package: soapysdr0.5-2-module-rtlsdr
 Architecture: any
-Conflicts: soapyosmo-rtlsdr
-Replaces: soapyosmo-rtlsdr
+Multi-Arch: same
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Soapy RTL-SDR - RTL-SDR device support for Soapy SDR.
- A Soapy module that supports RTL-SDR devices within the Soapy API.
+Description: RTL-SDR device support for SoapySDR
+ The Soapy RTL-SDR project provides a SoapySDR hardware support module.
+ Using this, any program using SoapySDR to interface to software
+ defined radio hardware can make use of low cost DVB-T/DAB+ USB dongles
+ based on the Realtek RTL2832U chip as receivers.
+
+Package: soapysdr-module-rtlsdr
+Architecture: all
+Depends: soapysdr0.5-2-module-rtlsdr, ${misc:Depends}
+Description: RTL-SDR device support for SoapySDR (default version)
+ The Soapy RTL-SDR project provides a SoapySDR hardware support module.
+ Using this, any program using SoapySDR to interface to software
+ defined radio hardware can make use of low cost DVB-T/DAB+ USB dongles
+ based on the Realtek RTL2832U chip as receivers.
+ .
+ This is an empty dependency package that pulls in the RTL-SDR module
+ for the default version of libsoapysdr.
