@@ -1,6 +1,7 @@
 Release 0.2.2 (pending)
 ==========================
 
+- Update debian files for SoapySDR module ABI format
 - Fix build failure on all big endian architectures
 
 Release 0.2.1 (2016-04-25)
